Fix alignements

--- a/src/app/actuality/comment-actuality/comment-actuality.component.css
+++ b/src/app/actuality/comment-actuality/comment-actuality.component.css
@@ -156,8 +156,8 @@
   display: flex;
   margin-left: 50px;
   margin-bottom: 20px;
+  margin-top: 10px;
   font-size: 14px;
-  margin-top: -10px;
   color: #575757
 }
 
@@ -184,7 +184,7 @@
 .btn {
   border: 1px solid;
   color: white;
-  border-color: var(--providerColor);
+  border-color: var(--providerColor); 
 }
 
 .btn:hover {
@@ -222,7 +222,7 @@
   height: 15px;
   text-align: center;
   border-radius: 10px;
-  margin-right: 10px;
+  margin-left: 10px;
   font-size: 12px;
   line-height: 15px;
 }
