--- a/src/app/actuality/detail-actuality/detail-actuality.component.css
+++ b/src/app/actuality/detail-actuality/detail-actuality.component.css
@@ -124,7 +124,7 @@
   display: flex;
   justify-content: center;
   font-size: 16px;
-  color: rgb(65, 124, 75);
+  color: black;
 }
 
 .provider_color {
@@ -231,7 +231,7 @@
   border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25px;
+  margin-top: 20px;
   width: 75px;
   height: 31px;
   padding-top: 3px;
